# voxide

./: .envrc  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml  ci.yml  publish.yml  rust.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  main.rs  mode.rs  models.rs  tui.rs  utils.rs
src/components/: home.rs  search.rs
src/models/: audio_stream.rs  radio_api.rs  radio_station.rs
