[package]
name = "voxide"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Kellebnberg <jonathan@jkellz.dev>"]

[dependencies]
env_logger = { version = "^0.11" }
crossterm = { version = "^0.27", features = ["event-stream"] }
futures = { version = "^0.3" }
log = { version = "^0.4" }
radiobrowser = { version = "^0.6" }
ratatui = { version = "^0.27" }
reqwest = { version = "^0.12" }
rodio = { version = "^0.18" }
thiserror = { version = "^1" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }

[patch.crates-io]
radiobrowser = { git = "https://gitlab.com/radiobrowser/radiobrowser-lib-rust.git" }
