[package]
name = "voxide"
version = "0.1.1"
edition = "2021"
description = "A Streaming Radio Player TUI"
repository = "https://github.com/jkellz-dev/voxide"
homepage = "https://github.com/jkellz-dev/voxide"
authors = ["Jonathan Kellenberg <jonathan@jkellz.dev>"]
keywords = ["streaming radio", "audio", "tui", "terminal" ]
categories = ["audio", "radio", "player", "music", "tui"]
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "^0.1" }
better-panic = { version = "^0.3" }
clap = { version = "^4", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = { version = "^0.6" }
config = { version = "^0.14" }
crossterm = { version = "^0.27", features = ["serde", "event-stream"] }
derive_deref = { version = "^1" }
directories = { version = "^5" }
futures = { version = "^0.3" }
human-panic = { version = "^2" }
json5 = { version = "^0.4" }
lazy_static = { version = "^1" }
libc = { version = "^0.2" }
pretty_assertions = { version = "^1.4" }
radiobrowser = { version = "^0.6", features = ["chrono"] }
ratatui = { version = "^0.27", features = ["serde", "macros"] }
reqwest = { version = "^0.12" }
rodio = { version = "^0.19" }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
signal-hook = { version = "^0.3" }
strip-ansi-escapes = { version = "^0.2" }
strum = { version = "^0.26", features = ["derive"] }
thiserror = { version = "^1" }
throbber-widgets-tui = "0.6.0"
tokio = { version = "^1.32", features = ["full"] }
tokio-util = { version = "^0.7" }
tracing = { version = "^0.1" }
tracing-error = { version = "^0.2" }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "serde"] }
tui-input = { version = "^0.9" }

[build-dependencies]
vergen = { version = "^8", features = [ "build", "git", "gitoxide", "cargo" ]}

[patch.crates-io]
radiobrowser = { git = "https://gitlab.com/radiobrowser/radiobrowser-lib-rust.git" }
